Added a docstring to one of the graphs

--- a/COVID-19 Data.ipynb
+++ b/COVID-19 Data.ipynb
@@ -3624,6 +3624,7 @@
     }
    ],
    "source": [
+    "#graphing a bubble plot to see correlation between population, positivity rate, and population density\n",
     "population_description = positive_test_percentage.merge(us_pop, how = 'left', on = 'state_name')\n",
     "\n",
     "population_description = population_description.dropna(how='any',subset = ['population','population density'])\n",
